Kubernetes/practice-k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: LoadBalancer
  selector:
    layer: web-node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
